<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GF Search</string>
    <string name="app_version">1.0.0-SNAPSHOT</string>
    <string name="app_version_about">Version 1.0.0-SNAPSHOT</string>
    <string name="hello">Hello gfsearch!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="settingSummary">Application Preferences</string>
    <string name="synchronization_progress_bar_title">Synchronizing</string>
    <string name="error_title">Error !</string>
    <string name="country_code_download_msg">Downloading CountryCode please wait...</string>
    <string name="upload_search_logs_download_msg">Uploading Search Logs please wait...</string>
    <string name="keyword_download_msg">Downloading keywords please wait...</string>
    <string name="synchronization_complete_msg">Synchronization Complete.</string>
    <string name="processing_keywords_msg">Processing Keywords</string>
    <string name="removing_keywords_msg">Removing Old Keywords</string>
    <string name="downloading_images_msg">Downloading Images</string>

    <!-- Connection strings-->
    <string name="server_url">http://ckwapps.applab.org:8888/</string>
    <string name="title_server_url">Server Url</string>
    <string name="summary_server_url">The url of the server to synchronize with.</string>
    <string name="setting_connection">Connection</string>
    <string name="summary_connection">Connection Related Settings</string>
    <string name="connection_preferences">Connection</string>
    <string name="action_search">Search</string>
    <string name="action_new_search">New Search</string>
    <string name="farmer_id_text">Farmer Id</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="favourite_searches">Favourite Searches</string>
    <string name="synchronise">Synchronize</string>
    <string name="country_code_server_url_path">search/getCountryCode</string>
    <string name="keyword_server_url_path">search/getsearchkeywords</string>
    <string name="image_server_url_path">search/getsfimages?imageId=</string>
    <string name="action_back">Back</string>
    <string name="action_forward">Forward</string>
    <string name="sample_text">sample text</string>

</resources>